# pyprojmsrv

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ISSUES.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci-cd.yaml
pyprojmsrv/: __init__.py
src/pyprojmsrv/: pyprojmsrv.py
tests/: __init__.py  test_pyprojmsrv.py
