[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html#how-to-use-it
requires = ["setuptools>=65", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "pyprojmsrv"
version = "0.0.1"
authors = [
  { name="Evgeny Karpovsky", email="ekarpovsky@gmail.com" },
]
description = "A python project micro-service template"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ekarpovs/python-project-micro-service-template"
"Bug Tracker" = "https://github.com/ekarpovs/python-project-micro-service-template/issues"
